<resources>
    <string name="app_name">NUMAD22Fa_AmalTharyan</string>
    <string name="hello_world">Hello World!</string>
    <string name="about_me_string">About Me</string>
    <string name="clicky_clicky"> Clicky Clicky</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="link_collector">Link Collector</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="prime_directive">Prime Directive</string>
    <string name="Location">Location</string>
    <string name="get_location">Current Location</string>
    <string name="requestPermission">Request Permission</string>
    <string name="cancel">Cancel</string>
    <string name="showReasonTitle">Location Permission Required</string>
    <string name="showReasonMessage">Allow location permission to get your current location.</string>
    <string name="locationPermissionRejected">Location permission was not accepted. To view your current location activate permission from settings</string>
    <string name="locationRejectedTitle">Location Permission Rejected</string>
    <string name="ok">Ok</string>
    <string name="alert">Alert</string>
    <string name="back_pressed_alert">You are about to loose the distance calculated. Do you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="clear">Reset Distance</string>
    <string name="totalDistance">Total distance: %1$f mtrs</string>
    <string name="current_location">Current Location \n\nLatitude: %1$f  \nLongitude: %2$f</string>
</resources>