<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickyClickyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="174dp"
            android:layout_marginEnd="280dp"
            android:layout_marginBottom="96dp"
            android:text="@string/A"
            app:layout_constraintBottom_toTopOf="@id/D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.7" />

        <Button
            android:id="@+id/D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="280dp"
            android:text="@string/D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/A" />

        <Button
            android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="92dp"
            android:text="@string/B"
            app:layout_constraintBottom_toTopOf="@+id/E"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="147dp"
            android:text="E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/B" />

        <Button
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="47dp"
            android:text="@string/C"
            app:layout_constraintBottom_toTopOf="@+id/F"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="21dp"
            android:text="@string/F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/C" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>