<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/about_me"
            android:layout_width="121dp"
            android:layout_height="47dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="290dp"
            android:layout_marginBottom="5dp"
            android:text="@string/about_me_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/link_collector"
            app:layout_constraintStart_toEndOf="@+id/clicky_clicky"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/clicky_clicky"
            android:layout_width="143dp"
            android:layout_height="50dp"
            android:layout_marginTop="290dp"
            android:text="@string/clicky_clicky"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/about_me"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/link_collector"
            android:layout_width="125dp"
            android:layout_height="51dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="293dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="4dp"
            android:text="@string/link_collector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/about_me"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/prime_directive"
            android:layout_width="125dp"
            android:layout_height="54dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="58dp"
            android:text="@string/prime_directive"
            app:layout_constraintBottom_toTopOf="@+id/clicky_clicky"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>